# amerta

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: case1_stoker.txt  case2_ritter.txt  case3_double_rarefaction.txt  case4_double_shock.txt
src/amerta_sv/: __init__.py  cli.py
src/amerta_sv/core/: __init__.py  analytical.py  cases.py  solver.py
src/amerta_sv/io/: config_manager.py  data_handler.py
src/amerta_sv/utils/: logger.py  timer.py
src/amerta_sv/visualization/: animator.py
tests/: __init__.py  test_cases.py  test_solver.py
